@@ -2718,10 +2718,10 @@ function pretty_password($pass, $print, $pre = '    ', $post = '')
 
 function emailDisclaimer() {
 	global $gallery;
-	$msg=sprintf(_("Note: This is an automatically generated email message sent from the website %s.  If you have received this in error, please ignore this message."),$gallery->app->photoAlbumURL).
+	$msg=sprintf(_("Note: This is an automatically generated email message sent from the %s website.  If you have received this in error, please ignore this message."),$gallery->app->photoAlbumURL).
 	     "  \r\n".
-	     sprintf(_("Report abuse to %s."),$gallery->app->adminEmail);
-	$msg2=sprintf("Note: This is an automatically generated email message sent from the website %s.  If you have received this in error, please ignore this message.  \r\nReport abuse to %s.", 
+	     sprintf(_("Report abuse to %s"),$gallery->app->adminEmail);
+	$msg2=sprintf("Note: This is an automatically generated email message sent from the %s website.  If you have received this in error, please ignore this message.  \r\nReport abuse to %s", 
 		$gallery->app->photoAlbumURL, $gallery->app->adminEmail);
 	if ($msg != $msg2) {
 		return "[$msg\r\n$msg2]\r\n\r\n";
