@@ -1,3 +1,9 @@
+2003-11-15  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b20
+
+	* Fixed bug where focus on new password page was an uneditable field.
+
+	* Re-arranged email message slightly, so links are clickable.
+
 2003-11-15  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b19
 
 	* Added message if you run backup_albums.php from setup directory.
